# MoveIt_Manipulator

./: README.md
devel/: .catkin  .rosinstall  local_setup.sh
devel/include/arduinobot_controller/: AnglesConverterRequest.h  AnglesConverterResponse.h
devel/include/arduinobot_test/: AddTwoInts.h  AddTwoIntsRequest.h  AddTwoIntsResponse.h
devel/lib/arduinobot_controller/: angles_converter.py  angles_converter_cpp  arduinobot_interface_node
devel/lib/arduinobot_test/: simple_service.py
devel/lib/pkgconfig/: arduinobot_controller.pc  arduinobot_description.pc  arduinobot_moveit.pc  arduinobot_remote.pc  arduinobot_test.pc
devel/share/arduinobot_controller/cmake/: arduinobot_controllerConfig.cmake
devel/share/arduinobot_moveit/cmake/: arduinobot_moveitConfig.cmake
src/arduinobot_controller/: CMakeLists.txt
src/arduinobot_controller/config/: joint_state_controller.yaml  trajectory_controllers.yaml
src/arduinobot_controller/launch/: controller.launch  manual_control.launch
src/arduinobot_description/launch/: display.launch  gazebo.launch
src/arduinobot_description/rviz/: display.rviz
src/arduinobot_description/urdf/: arduinobot.urdf.xacro
src/arduinobot_moveit/: .setup_assistant  package.xml
src/arduinobot_moveit/config/: gazebo_arduinobot.urdf  kinematics.yaml  ros_controllers.yaml
src/arduinobot_moveit/launch/: move_group.launch
src/arduinobot_remote/: CMakeLists.txt  package.xml
src/arduinobot_test/: CMakeLists.txt  package.xml
src/arduinobot_test/config/: simple_configuration.yaml
src/arduinobot_test/scripts/: simple_client.py
(+17 files in other folders)
